--- a/Labo_2/Opdracht_3.html
+++ b/Labo_2/Opdracht_3.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1>Oefening 3.1</h1>
+    <p>Dit is een eenvoudige paragraaf</p>
+    <h1>Oefening 3.2</h1>
+    <a href="https://example.com">dit is een link naar www.example.com</a>
+    <h1>Oefening 3.3</h1>
+    <p>Dit is een eenvoudige paragraaf <a href="https://example.com">met een hyperlink</a> en nog
+        wat meer tekst</p>
 </body>
 </html>
