--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
        <li>
            <h2>Labo 2</h2>
            <ol>
-               <li><a href="labo_2/opdracht_3.html">Opdracht 3</a></li>
-               <li><a href="labo_2/opdracht_4.html">Opdracht 4</a></li>
-               <li><a href="labo_2/opdracht_5.html">Opdracht 5</a></li>
-               <li><a href="labo_2/opdracht_6.html">Opdracht 6</a></li>
-               <li><a href="labo_2/opdracht_7.html">Opdracht 7</a></li>
-               <li><a href="labo_2/opdracht_8.html">Opdracht 8</a></li>
-               <li><a href="labo_2/opdracht_9.html">Opdracht 9</a></li>
-               <li><a href="labo_2/opdracht_10.html">Opdracht 10</a></li>
-               <li><a href="labo_2/opdracht_11.html">Opdracht 11</a></li>
-               <li><a href="labo_2/opdracht_12.html">Opdracht 12</a></li>
-               <li><a href="labo_2/opdracht_13.html">Opdracht 13</a></li>
+               <li><a href="Labo_2/Opdracht_3.html">Opdracht 3</a></li>
+               <li><a href="Labo_2/Opdracht_4.html">Opdracht 4</a></li>
+               <li><a href="Labo_2/Opdracht_5.html">Opdracht 5</a></li>
+               <li><a href="Labo_2/Opdracht_6.html">Opdracht 6</a></li>
+               <li><a href="Labo_2/Opdracht_7.html">Opdracht 7</a></li>
+               <li><a href="Labo_2/Opdracht_8.html">Opdracht 8</a></li>
+               <li><a href="Labo_2/Opdracht_9.html">Opdracht 9</a></li>
+               <li><a href="Labo_2/Opdracht_10.html">Opdracht 10</a></li>
+               <li><a href="Labo_2/Opdracht_11.html">Opdracht 11</a></li>
+               <li><a href="Labo_2/Opdracht_12.html">Opdracht 12</a></li>
+               <li><a href="Labo_2/Opdracht_13.html">Opdracht 13</a></li>
            </ol>
        </li>
    </ul>
