--- a/Labo_2/Opdracht_4.html
+++ b/Labo_2/Opdracht_4.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-    <p>Web      Development</p>
+    <p>Web      Development
+        web &nbsp; &nbsp; &nbsp; in de code zul je zien hoe we aan al deze spaties komen
+    </p>
+
     <p>
         hallo
         <br />
