--- a/Labo_2/Opdracht_4.html
+++ b/Labo_2/Opdracht_4.html
@@ -5,17 +5,20 @@
     <title>Title</title>
 </head>
 <body>
-    <p>Web      Development
-        web &nbsp; &nbsp; &nbsp; in de code zul je zien hoe we aan al deze spaties komen
-    </p>
+<h2>Oefening 4.1</h2>
+<p>
+    Dit      is    een      paragraaf    met    extra      spaties.
+</p>
 
-    <p>
-        hallo
-        <br />
-        ik
-        <br />
-        <br/>
-        ben
-    </p>
+<p>
+    Dit is de eerste regel.
+
+    Dit is de tweede regel
+</p>
+
+<p>
+    Voor geforceerde spaties: woord1&nbsp;&nbsp;&nbsp;woord2
+    Voor een nieuwe regel: regel A<br />regel B
+</p>
 </body>
 </html>
