--- a/Labo_2/Opdracht_8.html
+++ b/Labo_2/Opdracht_8.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
+<h1>incorrecte nesting</h1>
+<p>De fout zit hem erin dat HTML-elementen netjes genest moeten zijn: je mag geen strong openen binnen een span en pas sluiten buiten dat span</p>
+<span>hier komt een</span><a href="">link</a><span> te staan</span>
+<br/>
+<span>hier komt <strong>een</span><a href="">link</a></strong><span> te staan</span>
+<br/>
+<h1>Correcte nesting</h1>
+<p>Als de bedoeling is om “een link” samen te benadrukken, dan moet de strong de hele tekst en de link omvatten:</p>
+<span>hier komt </span><strong>een <a href="">link</a></strong><span> te staan</span>
+
 
 </body>
 </html>
