--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
                <li><a href="Labo_2/Opdracht_9.html">Opdracht 9</a></li>
                <li><a href="Labo_2/Opdracht_10.html">Opdracht 10</a></li>
                <li><a href="Labo_2/Opdracht_11.html">Opdracht 11</a></li>
-               <li><a href="Labo_2/Opdracht_12.html">Opdracht 12</a></li>
-               <li><a href="Labo_2/Opdracht_13.html">Opdracht 13</a></li>
+
            </ol>
        </li>
    </ul>
 <ul>
     <li>
     <h2>Labo 3</h2>
+        <ol>
+            <li><a href="Labo_3/homepage/Opdracht_1.html">Opdracht 12</a></li>
+            <li><a href="Labo_3/contact/index.html">Opdrach 1</a></li>
+        </ol>
     </li>
 </ul>
 
