--- a/Labo_3/homepage/Opdracht_1.html
+++ b/Labo_3/homepage/Opdracht_1.html
@@ -82,12 +82,13 @@
         <li>
             New Kids Turbo
             <br/>
-            <img src="images/New Kids.jpg" height="300" width="450  "/>
+            <img src="images/New%20kids.jpg" height="300" width="450  "/>
             <p> <a href="https://www.vtmgo.be/vtmgo/new-kids-turbo~88242323-7abf-49ba-8fd6-74665d93da7b?referrer=https%3A%2F%2Fwww.google.com%2F" > Dit is een link naar de film New Kids Turbo</a> </p>
         </li>
 
     </ol>
 </ul>
+
 
 </body>
 </html>
