--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <li>
     <h2>Labo 3</h2>
         <ol>
-            <li><a href="Labo_3/homepage/Opdracht_1.html">Opdracht 12</a></li>
-            <li><a href="Labo_3/contact/index.html">Opdrach 1</a></li>
+            <li><a href="Labo_3/homepage/Opdracht_1.html">Opdracht Homepage</a></li>
+            <li><a href="Labo_3/contact/index.html">Opdracht Contact</a></li>
+            <li><a href="Labo_3/opleindingsaanbod/index.html">Opdracht Opleidingsaanbod</a></li>
         </ol>
     </li>
 </ul>
