--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="Labo_3/homepage/Opdracht_1.html">Opdracht Homepage</a></li>
             <li><a href="Labo_3/contact/index.html">Opdracht Contact</a></li>
             <li><a href="Labo_3/opleindingsaanbod/index.html">Opdracht Opleidingsaanbod</a></li>
+            <li><a href="Labo_3/Uitbreiding%20personal%20homepage/Opdracht_1.html">Opdracht uitbreiding personal homepage</a></li>
         </ol>
     </li>
 </ul>
