--- a/Labo_3/Uitbreiding personal homepage/Opdracht_1.html
+++ b/Labo_3/Uitbreiding personal homepage/Opdracht_1.html
@@ -5,10 +5,14 @@
     <title>Opdracht: Personal homepage assignment</title>
 </head>
 <body>
+<header>
 <h1>Personal homepage Elias Van Hollebeke</h1>
+</header>
  <ul>
      <li>
+         <header>
          <h1>Persoonlijke informatie</h1>
+         </header>
      </li>
  </ul>
 <ul>
@@ -25,7 +29,9 @@
 
 <ul>
     <li>
+        <header>
         <h2>hobby's</h2>
+        </header>
     </li>
     <ol>
     <li>Voetbal
@@ -53,9 +59,11 @@
 
 <ul>
     <li>
+        <header>
         <h2>
         <strong>Favoriete bands</strong>
         </h2>
+        </header>
     </li>
 
         <ol>
@@ -74,9 +82,11 @@
 </ul>
 <ul>
     <li>
+        <header>
     <h2>
         <strong>Films</strong>
     </h2>
+        </header>
     </li>
     <ol>
         <li>
