--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    </ul>
 <ul>
     <li>
-    <h2>Labo 3</h2>
+    <h3>Labo 3</h3>
         <ol>
             <li><a href="Labo_3/homepage/Opdracht_1.html">Opdracht Homepage</a></li>
             <li><a href="Labo_3/contact/index.html">Opdracht Contact</a></li>
@@ -34,6 +34,15 @@
         </ol>
     </li>
 </ul>
+<ul>
+    <li>
+        <h4>Labo 4</h4>
+        <ol>
+            <li><a href="Labo_3/homepage/Opdracht_1.html">Opdracht Homepage</a></li>
+        </ol>
+    </li>
+</ul>
+
 
 </body>
 </html>
