--- a/Labo_3/Uitbreiding personal homepage/Opdracht_1.html
+++ b/Labo_3/Uitbreiding personal homepage/Opdracht_1.html
@@ -22,7 +22,7 @@
     <li>e-mailadres: Elias.vanhollebeke@student.vives.be</li>
     <li>foto:
         <br/>
-        <img src="images/Taak.jpg"width="250" height="250">
+        <img src="images/Taak.jpg" alt="Dit is een foto van een hond" width="250" height="250">
     </li>
 </ul>
 
@@ -32,7 +32,7 @@
         <header>
         <h2>hobby's</h2>
         </header>
-    </li>
+
     <ol>
     <li>Voetbal
         <br/>
@@ -45,41 +45,54 @@
      Wielrennen
         <br/>
         <strong>Omschrijving:</strong> Wielrennen is een sport waarbij je op snelheid en uithoudingsvermogen fietst, zowel op de weg als in de bergen.
-    </li>
-        <p> <a href="https://www.uci.org/discipline/road/6TBjsDD8902tud440iv1Cu?discipline=ROA"> Dit is een link naar de uci pagina van Wielrennen </a> </p>
 
+        <p> <a href="https://www.uci.org/discipline/road/6TBjsDD8902tud440iv1Cu?discipline=ROA"> Dit is een link naar de uci pagina van Wielrennen </a> </p>
+    </li>
  <li>Basketbal
      <br/>
     <strong>Omschrijving:</strong>Basketbal (of basketten) is een teamsport waarbij twee ploegen proberen de bal door de ring van de tegenstander te gooien.
  </li>
-        <p> <a href="https://www.nba.com/games" > Dit is een link naar de NBA matchen </a> </p>
-
+        <li>
+            <p>
+                <a href="https://www.nba.com/games">
+                    Dit is een link naar de NBA-matchen
+                </a>
+            </p>
+        </li>
     </ol>
 </ul>
 
 <ul>
     <li>
         <header>
-        <h2>
-        <strong>Favoriete bands</strong>
-        </h2>
+            <h2><strong>Favoriete bands</strong></h2>
         </header>
-    </li>
 
         <ol>
-          <li>
-              Boef
-              <br/>
-              <img src="images/Boef.jpg" height="300" width="250  "/>
-              <br/>
-           <p>   <a href="https://open.spotify.com/artist/0Jsk5iYMr5aNjHury7blm1" > Dit is een link naar de spotify van boef. </a> </p>
-              <li>Lil Kleine</li>
-            <img src="images/Lil Kleine.jpg" height="188" width="268"/>
-            <br/>
-            <p> <a href="https://open.spotify.com/artist/3AlRiyjMywTVNzTcHbf9QT"> Dit is een link naar de spotify van Lil Kleine</a> </p>
-          </li>
-         </ol>
+            <li>
+                Boef<br/>
+                <img src="images/Boef.jpg" alt="Een foto van Boef" height="300" width="250"/><br/>
+                <p>
+                    <a href="https://open.spotify.com/artist/0Jsk5iYMr5aNjHury7blm1">
+                        Dit is een link naar de Spotify van Boef.
+                    </a>
+                </p>
+            </li>
+
+            <li>
+                Lil Kleine<br/>
+                <img src="../homepage/images/Lil%20Kleine.jpg" alt="Een foto van Lil Kleine" height="188" width="268"/>
+                <br/>
+                <p>
+                    <a href="https://open.spotify.com/artist/3AlRiyjMywTVNzTcHbf9QT">
+                        Dit is een link naar de Spotify van Lil Kleine.
+                    </a>
+                </p>
+            </li>
+        </ol>
+    </li>
 </ul>
+
 <ul>
     <li>
         <header>
@@ -87,15 +100,13 @@
         <strong>Films</strong>
     </h2>
         </header>
-    </li>
     <ol>
         <li>
             New Kids Turbo
             <br/>
-            <img src="images/New%20kids.jpg" height="300" width="450  "/>
+            <img src="images/New%20kids.jpg" alt="dit is een foto van de film new kids"  width="450" height="300" />
             <p> <a href="https://www.vtmgo.be/vtmgo/new-kids-turbo~88242323-7abf-49ba-8fd6-74665d93da7b?referrer=https%3A%2F%2Fwww.google.com%2F" > Dit is een link naar de film New Kids Turbo</a> </p>
         </li>
-
     </ol>
 </ul>
 
