--- a/Labo_3/opleindingsaanbod/index.html
+++ b/Labo_3/opleindingsaanbod/index.html
@@ -9,38 +9,40 @@
 <p>&nbsp; &nbsp;&nbsp; &nbsp;
     Hogeschool VIVES</p>
 <ul>
-    <ol>
-        <li>
-        Biotechniek
-        <li/>
-        Gezondheidszorg
-        <li>
-            Handelswetenschappen en bedrijfskunde - informatica
-        </li>
-        <li>
-            Technology
-        </li>
-        <li>
-        Onderwijs
-        </li>
-        <li>
-        Sociaal-agogisch werk
-    </ol>
+    <li>
+        <header>
+            <h2>Studierichtingen</h2>
+        </header>
+
+        <ol>
+            <li>Biotechniek</li>
+            <li>Gezondheidszorg</li>
+            <li>Handelswetenschappen en Bedrijfskunde - Informatica</li>
+            <li>Technology</li>
+            <li>Onderwijs</li>
+            <li>Sociaal-agogisch werk</li>
+        </ol>
+    </li>
 </ul>
+
 <p> &nbsp; &nbsp;&nbsp; &nbsp;
     Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele
     bachelor diploma’s behalen:
 </p>
 <ul>
-    <li>Toegepaste Informatica</li>
-    <ol>
-       <li> Applicatie-ontwikkeling
-        <ul>
-            <li> Apps &amp; gamification</li>
-            <li>Networks &amp; cybersecurity</li>
-            <li>AI</li>
-            <ul/>
-    </ol>
+    <li>
+        Toegepaste Informatica
+        <ol>
+            <li>
+                Applicatie-ontwikkeling
+                <ul>
+                    <li>Apps &amp; Gamification</li>
+                    <li>Networks &amp; Cybersecurity</li>
+                    <li>AI</li>
+                </ul>
+            </li>
+        </ol>
+    </li>
 </ul>
 <ul>
     <li>
@@ -59,12 +61,12 @@
 <ul>
     <li>
         Office Management
-    </li>
         <ol>
-            <li>Management assistant</li>
-            <li>HR officer</li>
-            <li>Medical office manager</li>
+            <li>Management Assistant</li>
+            <li>HR Officer</li>
+            <li>Medical Office Manager</li>
         </ol>
+    </li>
 </ul>
 <p>Definitie van Ohm
 <br/> &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd<br/>
