--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     <li>
         <h4>Labo 4</h4>
         <ol>
-            <li><a href="Labo_3/homepage/Opdracht_1.html">Opdracht Homepage</a></li>
+            <li><a href="Labo_4/hoofdpagina/index.html">Pagina over mezelf</a></li>
+            <li><a href="Labo_4/hobby's/hobby's.html">Pagina over mijn hobby's</a></li>
+            <li><a href="Labo_4/likes/likes.html">Pagina over mijn likes</a></li>
+
         </ol>
     </li>
 </ul>
