--- a/Labo_3/homepage/Opdracht_1.html
+++ b/Labo_3/homepage/Opdracht_1.html
@@ -6,89 +6,72 @@
 </head>
 <body>
 <h1>Personal homepage Elias Van Hollebeke</h1>
- <ul>
-     <li>
-         <h1>Persoonlijke informatie</h1>
-     </li>
- </ul>
-<ul>
-    <li> naam: Elias Van Hollebeke</li>
-    <li>Adress: Sperrenwijk 17 Meulebeke </li>
-    <li>Telefoonnummer: 0468 20 67 38</li>
-    <li>e-mailadres: Elias.vanhollebeke@student.vives.be</li>
-    <li>foto:
-        <br/>
-        <img src="images/Taak.jpg"width="250" height="250">
-    </li>
-</ul>
 
 
-<ul>
-    <li>
-        <h2>hobby's</h2>
-    </li>
-    <ol>
-    <li>Voetbal
-        <br/>
-        <strong>Omschrijving:</strong> Voetbal is een populaire teamsport waarbij twee ploegen proberen om met een bal doelpunten te scoren in het doel van de tegenstander.
-       <br/>
-        <p>  <a href="https://www.fifa.com/">dit is een link naar www.fifa.com </a> </p>
-    </li>
+<section>
+    <h2>Persoonlijke informatie</h2>
+    <ul>
+        <li>Naam: Elias Van Hollebeke</li>
+        <li>Adres: Sperrenwijk 17 Meulebeke</li>
+        <li>Telefoonnummer: 0468 20 67 38</li>
+        <li>E-mailadres: Elias.vanhollebeke@student.vives.be</li>
+        <li>
+            Foto:<br>
+            <img src="images/Taak.jpg" width="250" height="250" alt="Foto van Elias Van Hollebeke">
+        </li>
+    </ul>
+</section>
 
-    <li>
-     Wielrennen
-        <br/>
-        <strong>Omschrijving:</strong> Wielrennen is een sport waarbij je op snelheid en uithoudingsvermogen fietst, zowel op de weg als in de bergen.
-    </li>
-        <p> <a href="https://www.uci.org/discipline/road/6TBjsDD8902tud440iv1Cu?discipline=ROA"> Dit is een link naar de uci pagina van Wielrennen </a> </p>
 
- <li>Basketbal
-     <br/>
-    <strong>Omschrijving:</strong>Basketbal (of basketten) is een teamsport waarbij twee ploegen proberen de bal door de ring van de tegenstander te gooien.
- </li>
-        <p> <a href="https://www.nba.com/games" > Dit is een link naar de NBA matchen </a> </p>
-
-    </ol>
-</ul>
-
-<ul>
-    <li>
-        <h2>
-        <strong>Favoriete bands</strong>
-        </h2>
-    </li>
-
-        <ol>
-          <li>
-              Boef
-              <br/>
-              <img src="images/Boef.jpg" height="300" width="250  "/>
-              <br/>
-           <p>   <a href="https://open.spotify.com/artist/0Jsk5iYMr5aNjHury7blm1" > Dit is een link naar de spotify van boef. </a> </p>
-              <li>Lil Kleine</li>
-            <img src="images/Lil Kleine.jpg" height="188" width="268"/>
-            <br/>
-            <p> <a href="https://open.spotify.com/artist/3AlRiyjMywTVNzTcHbf9QT"> Dit is een link naar de spotify van Lil Kleine</a> </p>
-          </li>
-         </ol>
-</ul>
-<ul>
-    <li>
-    <h2>
-        <strong>Films</strong>
-    </h2>
-    </li>
+<section>
+    <h2>Hobby's</h2>
     <ol>
         <li>
-            New Kids Turbo
-            <br/>
-            <img src="images/New%20kids.jpg" height="300" width="450  "/>
-            <p> <a href="https://www.vtmgo.be/vtmgo/new-kids-turbo~88242323-7abf-49ba-8fd6-74665d93da7b?referrer=https%3A%2F%2Fwww.google.com%2F" > Dit is een link naar de film New Kids Turbo</a> </p>
+            Voetbal<br>
+            <strong>Omschrijving:</strong> Voetbal is een populaire teamsport waarbij twee ploegen proberen om met een bal doelpunten te scoren in het doel van de tegenstander.<br>
+            <a href="https://www.fifa.com/">Link naar FIFA</a>
         </li>
-
+        <li>
+            Wielrennen<br>
+            <strong>Omschrijving:</strong> Wielrennen is een sport waarbij je op snelheid en uithoudingsvermogen fietst, zowel op de weg als in de bergen.<br>
+            <a href="https://www.uci.org/discipline/road/6TBjsDD8902tud440iv1Cu?discipline=ROA">Link naar UCI</a>
+        </li>
+        <li>
+            Basketbal<br>
+            <strong>Omschrijving:</strong> Basketbal is een teamsport waarbij twee ploegen proberen de bal door de ring van de tegenstander te gooien.<br>
+            <a href="https://www.nba.com/games">Link naar NBA</a>
+        </li>
     </ol>
-</ul>
+</section>
 
+
+<section>
+    <h2>Favoriete bands</h2>
+    <ol>
+        <li>
+            Boef<br>
+            <img src="images/Boef.jpg" height="300" width="250" alt="Foto van Boef"><br>
+            <a href="https://open.spotify.com/artist/0Jsk5iYMr5aNjHury7blm1">Spotify van Boef</a>
+        </li>
+        <li>
+            Lil Kleine<br>
+            <img src="images/Lil Kleine.jpg" height="188" width="268" alt="Foto van Lil Kleine"><br>
+            <a href="https://open.spotify.com/artist/3AlRiyjMywTVNzTcHbf9QT">Spotify van Lil Kleine</a>
+        </li>
+    </ol>
+</section>
+
+
+<section>
+    <h2>Films</h2>
+    <ol>
+        <li>
+            New Kids Turbo<br>
+            <img src="images/New%20kids.jpg" height="300" width="450" alt="Film New Kids Turbo"><br>
+            <a href="https://www.vtmgo.be/vtmgo/new-kids-turbo~88242323-7abf-49ba-8fd6-74665d93da7b?referrer=https%3A%2F%2Fwww.google.com%2F">Link naar New Kids Turbo</a>
+        </li>
+    </ol>
+</section>
 
 </body>
 </html>
