--- a/Labo_4/likes/likes.html
+++ b/Labo_4/likes/likes.html
@@ -5,6 +5,44 @@
     <title>Title</title>
 </head>
 <body>
+<header>
+<h2>Favoriete bands</h2>
+</header>
+<section>
+<ol>
+    <li>
+        Boef<br>
+        <img  src="../../Labo_3/homepage/images/Boef.jpg" height="300" width="250" alt="Foto van Boef">
+<br/>
+        <a href="https://open.spotify.com/artist/0Jsk5iYMr5aNjHury7blm1">Spotify van Boef</a>
+    </li>
+    <li>
+        Lil Kleine<br>
+        <img src="../../Labo_3/homepage/images/Lil Kleine.jpg" height="188" width="268" alt="Foto van Lil Kleine"> <br>
+        <a href="https://open.spotify.com/artist/3AlRiyjMywTVNzTcHbf9QT">Spotify van Lil Kleine</a>
+    </li>
+</ol>
+</section>
+
+
+<section>
+    <h2>Films</h2>
+    <ol>
+        <li>
+            New Kids Turbo<br>
+            <img src="../../Labo_3/homepage/images/New%20kids.jpg" height="300" width="450" alt="Film New Kids Turbo"><br>
+            <a href="https://www.vtmgo.be/vtmgo/new-kids-turbo~88242323-7abf-49ba-8fd6-74665d93da7b?referrer=https%3A%2F%2Fwww.google.com%2F">Link naar New Kids Turbo</a>
+        </li>
+    </ol>
+</section>
+
+<nav>
+    <ul>
+        <li><a href="../../Labo_3/Uitbreiding%20personal%20homepage/Opdracht_1.html">Homepage</a> </li>
+        <li><a href="../../Labo_4/hobby's/hobby's.html">Hobby's</a></li>
+        <li><a href ="../../Labo_4/likes/likes.html">Pagina over mijn likes</a></li>
+    </ul>
+</nav>
 
 </body>
 </html>
