--- a/Labo_4/hobby's/hobby's.html
+++ b/Labo_4/hobby's/hobby's.html
@@ -40,5 +40,13 @@
 </ol>
 </ul>
 </section>
+
+<nav>
+    <ul>
+        <li><a href="../../Labo_3/Uitbreiding%20personal%20homepage/Opdracht_1.html"></a> </li>
+        <li><a href="../../Labo_4/hobby's/hobby's.html">Hobby's</a></li>
+        <li><a href ="../../Labo_4/likes/likes.html">Pagina over mijn likes</a></li>
+    </ul>
+</nav>
 </body>
 </html>
