--- a/Labo_4/hoofdpagina/index.html
+++ b/Labo_4/hoofdpagina/index.html
@@ -27,5 +27,12 @@
     </li>
 </ul>
 </section>
+<nav>
+    <ul>
+        <li><a href="../../Labo_3/Uitbreiding%20personal%20homepage/Opdracht_1.html">homepage</a> </li>
+        <li><a href="../../Labo_4/hobby's/hobby's.html">Hobby's</a></li>
+        <li><a href ="../../Labo_4/likes/likes.html">Pagina over mijn likes</a></li>
+    </ul>
+</nav>
 </body>
 </html>
