--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
         </ol>
     </li>
 </ul>
-
+<ul>
+    <li>
+        <h5>Labo 5</h5>
+        <ol>
+            <li><a href="Labo_5/Opdracht_6.html">Opdracht 6</a></li>
+            <li><a href="Labo_5/Opdracht_7.html">Opdracht 7</a></li>
+        </ol>
+    </li>
+</ul>
 
 </body>
 </html>
