--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </ul>
 <ul>
     <li>
-        <h4>Labo 4</h4>
+        <h3>Labo 4</h3>
         <ol>
             <li><a href="Labo_4/hoofdpagina/index.html">Pagina over mezelf</a></li>
             <li><a href="Labo_4/hobby's/hobby's.html">Pagina over mijn hobby's</a></li>
@@ -54,6 +54,16 @@
         </ol>
     </li>
 </ul>
+   <h3>Labo 5</h3>
+   <ol>
+       <li><a href="Labo_6/Opdracht_1.html">Opdracht 1</a></li>
+       <li><a href="Labo_6/Opdracht_3.html">Opdracht cv maken met een Style </a></li>
+       <li><a href="Labo_6/Opdracht_4.html">Opdracht 4</a></li>
+       <li><a href="Labo_6/Opdracht_5.html">Opdracht 5</a></li>
+       <li><a href="Labo_6/Opdracht_6.html">Opdracht 6</a></li>
+   </ol>
+   </li>
+   </ul>
 
 </body>
 </html>
