--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
 </ul>
 <ul>
     <li>
+        <h3>Labo 5</h3>
         <ol>
             <li><a href="Labo_5/Opdracht_6.html">Opdracht 6</a></li>
             <li><a href="Labo_5/Opdracht_7.html">Opdracht 7</a></li>
         </ol>
     </li>
 </ul>
+<ul>
+    <li>
    <h3>Labo 5</h3>
    <ol>
        <li><a href="Labo_6/Opdracht_1.html">Opdracht 1</a></li>
