--- a/index.html
+++ b/index.html
@@ -68,5 +68,17 @@
    </li>
    </ul>
 
+   <ul>
+       <li>
+           <h4>Labo 7</h4>
+           <ol>
+               <li><a href="Labo_7/index.html">Natuur Blog</a></li>
+               <li><a href="Labo_7/Opdracht_2.html">Opdracht 2</a></li>
+               <li><a href="Labo_7/Kalender.html">Kalender</a></li>
+               <li><a href="Labo_7/Personal_homepage.html">personal homepage</a></li>
+           </ol>
+       </li>
+   </ul>
+
 </body>
 </html>
