--- a/index.html
+++ b/index.html
@@ -80,5 +80,17 @@
        </li>
    </ul>
 
+   <ul>
+       <li>
+           <h4>Labo 8</h4>
+           <ol>
+               <li><a href="Labo_8/Lorem_ipsum.html">Lorem ipsum</a></li>
+               <li><a href="Labo_8/Lorem_ipsumExtraSpaties.html">Lorem Ipsum extra spaties</a></li>
+               <li><a href="Labo_8/Cocktail_bar.html">Cocktail bar</a></li>
+
+           </ol>
+       </li>
+   </ul>
+
 </body>
 </html>
