--- a/index.html
+++ b/index.html
@@ -92,5 +92,17 @@
        </li>
    </ul>
 
+   <ul>
+       <li>
+           <h4>Labo 9</h4>
+           <ol>
+               <li><a href="Labo_9/Opdracht_positioneren_foto.html">Positioneren van foto's</a></li>
+               <li><a href="Labo_9/Airbus.html">Website Airbus</a></li>
+
+
+           </ol>
+       </li>
+   </ul>
+
 </body>
 </html>
