--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
            </ol>
        </li>
    </ul>
+   <ul>
+       <li>
+           <h4>Labo 10</h4>
+           <ol>
+               <li><a href="Labo_10/oefening_3.3.html">oefening katten aan de hand van verschillende pixels</a></li>
+               <li><a href="Labo_10/Oefening_1.html">Bootstraps</a></li>
+               <li><a href="Labo_10/Oefening_2.html">op verschillende apparaten</a></li>
+               <li><a href="Labo_10/Schilderij_piet_monderiaan.html">Schilderij</a></li>
+               <li><a href="Labo_10/Homepage.html">Homepage</a></li>
+
+
+           </ol>
+       </li>
+   </ul>
 
 </body>
 </html>
