--- a/index.html
+++ b/index.html
@@ -118,5 +118,24 @@
        </li>
    </ul>
 
+   <ul>
+       <li>
+           <h4>Labo 11</h4>
+           <ol>
+               <li><a href="Labo_11/exercise1.html">exercise 1</a></li>
+               <li><a href="Labo_11/exercise2.html">exercise 2</a></li>
+               <li><a href="Labo_11/exercise3.html">exercise 3 </a></li>
+               <li><a href="Labo_11/exercise4.html">exercise 4</a></li>
+               <li><a href="Labo_11/exercise5.html">exercise 5</a></li>
+               <li><a href="Labo_11/exercise6.html">exercise 6</a></li>
+               <li><a href="Labo_11/Beginsituatie/index.html">Uitbreiding</a></li>
+
+
+           </ol>
+       </li>
+   </ul>
+
+
+
 </body>
 </html>
