--- a/index.html
+++ b/index.html
@@ -134,6 +134,19 @@
            </ol>
        </li>
    </ul>
+   <ul>
+       <li>
+           <h4>Labo 12</h4>
+           <ol>
+
+               <li><a href="Labo_12/Beginsituatie%201/index.html">oefening 1 </a></li>
+               <li><a href="Labo_12/Beginsituatie%202/index.html">oefening 2 </a></li>
+               <li><a href="Labo_12/Beginsituatie%203/Beginsituatie%203/index.html">Oefening 3</a></li>
+
+
+           </ol>
+       </li>
+   </ul>
 
 
 
