--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+
     <title>Title</title>
 </head>
 <body>
@@ -147,6 +148,18 @@
            </ol>
        </li>
    </ul>
+   <ul>
+       <li>
+           <h4>Labo Demo rekenmachine</h4>
+           <ol>
+
+               <li><a href="demo%20rekenmachine/index.html">Demo RekenMachine </a></li>
+               
+           </ol>
+       </li>
+   </ul>
+
+
 
 
 
