--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
        </li>
    </ul>
 
+   <ul>
+       <li>
+           <h4>Labo 14 JavaScript deel2</h4>
+           <ol>
+
+               <li><a href="Labo_14/Opdracht_Arrays/Opdracht1.html">Arrays </a></li>
+               <li><a href="Labo_14/Opdracht%20kopieer/index.html">kopieer opdracht </a></li>
+               <li><a href="Labo_14/Opdracht_dialoogvensters/Opdracht_2.html">Dialoogvensters </a></li>
+               <li><a href="Labo_14/Opdracht_innerHTML/Opdracht_3.html">Innerhtml </a></li>
+               <li><a href="Labo_14/Opdracht_substring/index.html">Substrings </a></li>
+
+           </ol>
+       </li>
+   </ul>
+
 
 
 
